--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,40 @@
 
 			.gallery > li > a > img {
 				}
+
+.apifs-wrapper .apiz-loading-animation-image {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	width: 200px;
+	height: 200px;
+	margin: -100px 0 0 -100px;
+	background-size: 120px 120px;
+	background-color: #e7e7e7;
+	border-radius: 100px;
+	box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.1);
+	}
+
+
+@media screen and (max-width: 600px) {
+
+	.apifs-wrapper .apiz-loading-animation-image {
+		width: 140px;
+		height: 140px;
+		margin: -70px 0 0 -70px;
+		background-size: 80px 80px;
+		border-radius: 70px;
+		}
+}
+
+
+@media screen and (max-width: 400px) {
+
+	.apifs-wrapper .apiz-loading-animation-image {
+		width: 100px;
+		height: 100px;
+		margin: -50px 0 0 -50px;
+		background-size: 60px 60px;
+		border-radius: 50px;
+		}
+}
